--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@
         summary {
             display: list-item;
         }
+         
 
         blockquote,
         dd,
@@ -857,4 +858,13 @@
 
           .mx-2{margin-left: 8px;margin-right: 8px;}
         .mb-5{margin-bottom: 1.25rem;}
+      .inline-block{display: inline-block;}
+        .mb-10{margin-bottom: 2.5rem;}
+        
+        .hover:bg-transparent:hover {
+            background-color: transparent;
+        }
+        .hover:text-white:hover {
+            color: #fff;
+        }
 
